syntax = "proto3";

package gnoi.sonic;

//option (types.gnoi_version) = "0.1.0";

service SonicService {
  rpc ShowTechsupport (TechsupportRequest) returns (TechsupportResponse) {}
  rpc Sum (SumRequest) returns (SumResponse) {}

  rpc SaveConfig(SaveConfigRequest) returns (SaveConfigResponse) {}
  rpc ReloadConfig(ReloadConfigRequest) returns (ReloadConfigResponse) {}
  rpc LoadMgmtConfig(LoadMgmtConfigRequest) returns (LoadMgmtConfigResponse) {}
  rpc LoadMinigraph(LoadMinigraphRequest) returns (LoadMinigraphResponse) {}

  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse) {}
  rpc Refresh(RefreshRequest) returns (RefreshResponse) {}

}

message TechsupportRequest {
    message Input {
        string date = 1;
    }
    Input input = 1;
}
message TechsupportResponse {
    message Output {
        string output_filename = 1;
    }
    Output output = 1;
}


message SumRequest {
    message Input {
        int32 left = 1;
        int32 right = 2;
    }
    Input input = 1;
}
message SumResponse {
    message Output {
        int32 result = 1;
    }
    Output output = 1;
}


message SaveConfigRequest {
    message Input {
        string FilePath = 1;
    }
    Input input = 1;
}
message SaveConfigResponse {
    message Output {
        string Status = 1;
    }
    Output output = 1;
}

message ReloadConfigRequest {
    message Input {
        string FilePath = 1;
    }
    Input input = 1;
}
message ReloadConfigResponse {
    message Output {
        string Status = 1;
    }
    Output output = 1;
}

message LoadMgmtConfigRequest {
    message Input {
        string FilePath = 1;
    }
    Input input = 1;
}
message LoadMgmtConfigResponse {
    message Output {
        string Status = 1;
    }
    Output output = 1;
}

message LoadMinigraphRequest {
    message Input {
        string FilePath = 1;
    }
    Input input = 1;
}
message LoadMinigraphResponse {
    message Output {
        string Status = 1;
    }
    Output output = 1;
}

message JwtToken {
    string access_token = 1;
    string type = 2;
    int64 expires_in = 3; 
}
message AuthenticateRequest {
    string username = 1;
    string password = 2;
}

message AuthenticateResponse {
    JwtToken Token = 1;
}

message RefreshRequest {
}

message RefreshResponse {
    JwtToken Token = 1;
}